refactor: [MCP][MANUAL] use Maze cell constants in MazeBuilder